[package]
name = "r_web_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["clap_derive"] }
scraper = { version = "0.13.0", features = ["indexmap", "deterministic"] }
ureq = { version = "2.5.0", features = ["rustls-native-certs", "json", "cookies", "charset"] }
url = "2.2.2"
